# bookbrain

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: __init__.py  auth.py  book_apis.py  config.py  database.py  models.py  recommendation.py  templating.py
app/routers/: books.py  recommendations.py
templates/: base.html  dashboard.html  library.html  login.html  recommendations.html  register.html  search.html
templates/partials/: book_card.html  library_content.html  rating_stars.html  recommendation_card.html  recommendations_content.html  recommendations_empty.html  register_error.html  search_results.html
